# dotfiles

./: .aliases  .bashrc  .claude-sync-ignore  .claude-toolkit-ignore  .gitconfig  .gitignore  .gitignore_global  .pre-commit-config.yaml  20260107_neovim_status.md  BACKLOG.json  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  dotfiles-setup-guide.md  install-tools.sh  install.sh  uninstall.sh
.claude/: settings.json  (+1 more)
templates/claude-project/: .gitignore  .mcp.json  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  template.gitignore
templates/claude-project/.claude/: settings.local.json
templates/claude-project/.claude/agents/: code-debugger.md  code-reviewer.md  codebase-mapper.md  critical-code-reviewer.md  debugger.md  goal-verifier.md  milestone-reviewer.md  pattern-finder.md  plan-reviewer.md  verifier.md
templates/claude-project/.claude/hooks/: enforce-make-commands.sh  enforce-uv-run.sh  session-start.sh
templates/claude-project/.claude/memories/: essential-conventions-code_style.md  essential-conventions-memory.md  essential-preferences-conversational_patterns.md  essential-reference-commands.md  essential-workflow-task_completion.md  philosophy-reducing_entropy.md
templates/claude-project/.claude/skills/analyze/: SKILL.md
templates/claude-project/.claude/skills/analyze-idea/: SKILL.md
templates/claude-project/.claude/skills/brainstorm-idea/: SKILL.md
templates/claude-project/.claude/skills/conversational-patterns/: SKILL.md
templates/claude-project/.claude/skills/database-schema/: SKILL.md
templates/claude-project/.claude/skills/draft-pr/: SKILL.md
templates/claude-project/.claude/skills/git-worktrees/: SKILL.md
templates/claude-project/.claude/skills/json-reader/: SKILL.md
templates/claude-project/.claude/skills/list-memories/: SKILL.md
templates/claude-project/.claude/skills/mermaid-diagrams/: SKILL.md
templates/claude-project/.claude/skills/naming-analyzer/: SKILL.md
templates/claude-project/.claude/skills/next-steps/: SKILL.md
templates/claude-project/.claude/skills/qa-planner/: SKILL.md
templates/claude-project/.claude/skills/qa-test-planner/: SKILL.md
templates/claude-project/.claude/skills/quick-review/: SKILL.md
templates/claude-project/.claude/skills/review-plan/: SKILL.md
templates/claude-project/.claude/skills/skill-judge/: SKILL.md
templates/claude-project/.claude/skills/snap-back/: SKILL.md
templates/claude-project/.claude/skills/wrap-up/: SKILL.md
templates/claude-project/.github/: PULL_REQUEST_TEMPLATE.md
(+52 files in other folders)
