[project]
name = "project-name"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
lint = [
    "pre-commit",
    "ty>=0.0.1a7",
]
dev = [
    "project-name[test,lint]",
]

# Uncomment to add CLI entry point
# [project.scripts]
# mycli = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ==============================================================================
# Ruff - Linting & Formatting
# ==============================================================================

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "E",      # pycodestyle errors
    "I",      # isort
    "UP",     # pyupgrade
    "PL",     # pylint
    "T201",   # print statements
]
ignore = [
    "E501",     # line too long (formatter handles this)
    "PLC0415",  # import outside toplevel (allow lazy imports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# Pytest
# ==============================================================================

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external services)",
    "unit: marks tests as unit tests (no external dependencies)",
]

# ==============================================================================
# Ty - Type Checking
# ==============================================================================

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = false

[tool.ty.rules]
# Core safety (always error)
unresolved-reference = "error"
invalid-assignment = "error"
call-non-callable = "error"
division-by-zero = "error"

# Import checks
possibly-unresolved-reference = "warn"

# Code quality
redundant-cast = "ignore"
unused-ignore-comment = "warn"

# Per-directory overrides for tests
[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"
unused-ignore-comment = "ignore"
